--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>My Books</title>
 </head>
 
@@ -21,6 +22,13 @@
             </button>
         </div>
     </nav>
+    <main>
+        <div>
+            <button type="button">
+                Add New Book
+            </button>
+        </div>
+    </main>
 </body>
 
 </html>
