--- a/index.html
+++ b/index.html
@@ -6,27 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <script defer type="module" src="./dist/index.js"></script>
     <title>My Books</title>
 </head>
 
 <body>
-    <nav>
-        <header>
+    <div class="overlay">
+        <div class="modal-container">
+            <header>
+                <h2>Add a new book!</h2>
+            </header>
+            <form>
+                <fieldset>
+                    <input placeholder="Title" type="text" name="book-title" id="book-title">
+                    <input placeholder="Author" type="text" name="book-author" id="book-author">
+                    <input placeholder="Pages" type="number" name="book-pages" id="book-pages" min="0">
+                    <div class="item">
+                        <div class="checkbox-rect">
+                            <input type="checkbox" id="checkbox-rect" name="check">
+                            <label for="checkbox-rect">Did you read it?</label>
+                        </div>
+                    </div>
+                    <button class="btn" type="button">Submit</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <nav class="nav-container">
+        <header class="title-container">
             <h1>
                 My Books
             </h1>
         </header>
-        <div>
-            <button type="button">
+        <div class="button-container">
+            <button class="btn" type="button">
                 Log In
             </button>
         </div>
     </nav>
-    <main>
-        <div>
-            <button type="button">
+    <main class="main-container">
+        <div class="button-container button-add-container">
+            <button type="button" class="btn">
                 Add New Book
             </button>
+        </div>
+        <div class="cards-container">
+
         </div>
     </main>
 </body>
